crates/spt-cli/tests/snapshots/help_snapshots__help_mcp.snap
---
source: crates/spt-cli/tests/help_snapshots.rs
expression: out
---
Built-in MCP server controls

Usage: spt mcp [OPTIONS] <COMMAND>

Commands:
  serve    Run the MCP server
  inspect  Inspect MCP capabilities, resources, tools
  policy   Manage the MCP policy
  help     Print this message or the help of the given subcommand(s)

Options:
      --config <PATH>
          Path to a single config file
          
          [env: SPT_CONFIG=]

      --config-dir <PATH>
          Path to a directory of `*.toml` configs (loaded in lexical order)

      --config-url <URL>
          HTTPS URL of a remote config to fetch
          
          [env: SPT_CONFIG_URL=]

      --config-fingerprint <SHA256>
          SHA-256 fingerprint pin for `--config-url`

      --state-dir <PATH>
          Override the runtime state directory
          
          [env: SPT_STATE_DIR=]

      --portable
          Portable mode: keep all runtime state next to the executable instead of OS-standard
          locations (no OS install required).
          
          `main.rs` performs a raw pre-clap scan of the argv for this flag so portable paths are
          resolved before the runtime is built; this declaration exists so the flag is visible to
          `--help`, generated shell completions, and the man pages.

      --profile <NAME>
          Restrict operations to the named profile

      --output <OUTPUT>
          Output format for command results

          Possible values:
          - human: Human-readable text (default)
          - json:  Structured JSON
          - jsonl: JSON Lines (one record per line)
          - yaml:  YAML
          
          [default: human]

      --json
          Convenience alias for `--output json`

      --log-level <LOG_LEVEL>
          Tracing log level

          Possible values:
          - error: Only errors
          - warn:  Warnings and above
          - info:  Informational and above (default)
          - debug: Debug and above
          - trace: Trace and above (very verbose)
          
          [default: info]

      --color <COLOR>
          Color policy for human output

          Possible values:
          - auto:   Auto-detect based on tty
          - always: Always emit color escapes
          - never:  Never emit color escapes
          
          [default: auto]

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (repeat for more)

      --no-color
          Disable color (legacy convenience flag; use `--color never`)

      --dry-run
          Show what would happen without making changes

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

EXAMPLES:
  spt mcp serve --stdio --read-only --enable
  spt mcp serve --listen 127.0.0.1:9095 --read-only --enable
  spt mcp inspect --json
  spt mcp policy show
  spt mcp policy set allow_write_tools=profile.set,event.test
