crates/spt-cli/tests/snapshots/help_snapshots__help_sftp.snap
---
source: crates/spt-cli/tests/help_snapshots.rs
expression: out
---
SFTP file operations and mount planning

Usage: spt sftp [OPTIONS] <COMMAND>

Commands:
  test    Connect to the profile and open the SFTP subsystem
  list    List a remote directory
  stat    Show metadata for a remote path
  get     Download a remote file
  put     Upload a local file
  mkdir   Create a remote directory
  rm      Remove a remote file
  rmdir   Remove a remote directory
  rename  Rename a remote file or directory
  mount   Manage SFTP-backed filesystem mount entries
  drive   Manage SFTP-backed Windows drive entries
  help    Print this message or the help of the given subcommand(s)

Options:
      --config <PATH>
          Path to a single config file
          
          [env: SPT_CONFIG=]

      --config-dir <PATH>
          Path to a directory of `*.toml` configs (loaded in lexical order)

      --config-url <URL>
          HTTPS URL of a remote config to fetch
          
          [env: SPT_CONFIG_URL=]

      --config-fingerprint <SHA256>
          SHA-256 fingerprint pin for `--config-url`

      --state-dir <PATH>
          Override the runtime state directory
          
          [env: SPT_STATE_DIR=]

      --profile <NAME>
          Restrict operations to the named profile

      --output <OUTPUT>
          Output format for command results

          Possible values:
          - human: Human-readable text (default)
          - json:  Structured JSON
          - jsonl: JSON Lines (one record per line)
          - yaml:  YAML
          
          [default: human]

      --json
          Convenience alias for `--output json`

      --log-level <LOG_LEVEL>
          Tracing log level

          Possible values:
          - error: Only errors
          - warn:  Warnings and above
          - info:  Informational and above (default)
          - debug: Debug and above
          - trace: Trace and above (very verbose)
          
          [default: info]

      --color <COLOR>
          Color policy for human output

          Possible values:
          - auto:   Auto-detect based on tty
          - always: Always emit color escapes
          - never:  Never emit color escapes
          
          [default: auto]

  -q, --quiet
          Suppress non-essential output

  -v, --verbose...
          Increase verbosity (repeat for more)

      --no-color
          Disable color (legacy convenience flag; use `--color never`)

      --dry-run
          Show what would happen without making changes

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

EXAMPLES:
  spt sftp test --profile edge
  spt sftp list --profile edge /var/log --json
  spt sftp get --profile edge /etc/app/config.toml --out ./config.toml
  spt sftp put --profile edge ./build.tar.gz /tmp/build.tar.gz
  spt sftp mount add --profile edge --name data --remote /srv/data --mount-point /mnt/spt-data
  spt sftp drive add --profile edge --name data --remote /srv/data --letter S:
